--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 absl-py==2.1.0
+anyio==4.6.2.post1
+asphalt==4.12.0
 asttokens==2.4.1
 astunparse==1.6.3
+async-generator==1.10
+async-timeout==5.0.1
+asyncio-extras==1.3.2
+autocommand==2.2.2
+backports.tarfile==1.2.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
 comm==0.2.2
 cycler==0.10.0
 debugpy==1.8.8
+declare==1.0.1
 decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.1.0
@@ -17,24 +26,44 @@ google-auth==2.36.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.68.0
+h11==0.14.0
 h5py==3.12.1
+httpcore==1.0.7
+httpx==0.27.2
+httpx-ws==0.6.2
 idna==3.10
+importlib_metadata==8.0.0
+importlib_resources==6.4.0
+inflect==7.3.1
 ipykernel==6.29.5
 ipython==8.29.0
+jaraco.collections==5.1.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jaraco.text==3.12.1
 jax==0.4.30
 jaxlib==0.4.30
 jedi==0.19.2
 joblib==1.4.2
+jpterm==0.2.19
+jupyter-ydoc==2.0.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 keras==2.12.0
+kernel-driver==0.0.7
 kiwisolver==1.0.1
 libclang==18.1.1
+linkify-it-py==2.0.3
 Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.5.2
 matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
 ml_dtypes==0.5.0
+more-itertools==10.3.0
+nbterm==0.0.13
 nest-asyncio==1.6.0
 numpy==1.23.5
 oauthlib==3.2.2
@@ -45,6 +74,7 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
+plotext==5.3.2
 prompt_toolkit==3.0.48
 protobuf==4.25.5
 psutil==6.1.0
@@ -52,18 +82,28 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycrdt==0.8.31
+pycrdt-websocket==0.13.5
 Pygments==2.18.0
 pyparsing==3.0.9
+pyte==0.8.2
 python-dateutil==2.9.0.post0
 pytz==2022.1
 pyzmq==26.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
+rich==13.9.4
+rich-click==1.8.4
 rsa==4.9
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.12
 scikit-learn==1.6.0rc1
 scipy==1.14.1
 seaborn==0.9.0
+shellingham==1.5.4
 six==1.16.0
+sniffio==1.3.1
+sqlite-anyio==0.2.3
 stack-data==0.6.3
 tensorboard==2.12.3
 tensorboard-data-server==0.7.2
@@ -71,12 +111,46 @@ tensorflow==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
+-e git+https://github.com/lauraschauer/tesseract-ml-release.git@38240d543354d94dc701fc73527764b4c944be36#egg=Tesseract
+textual==0.76.0
+textual-imageview==0.1.1
+textual-plotext==0.2.1
 threadpoolctl==3.5.0
+tomli==2.0.1
 tornado==6.4.1
 tqdm==4.25.0
 traitlets==5.14.3
+tree-sitter==0.20.4
+tree-sitter-languages==1.10.2
+txl==0.2.19
+txl_cell==0.2.14
+txl_console==0.2.16
+txl_editors==0.2.14
+txl_file_browser==0.2.14
+txl_image_viewer==0.2.14
+txl_jpterm==0.2.14
+txl_kernel==0.2.14
+txl_launcher==0.2.14
+txl_local_contents==0.2.14
+txl_local_kernels==0.2.14
+txl_local_terminals==0.2.14
+txl_markdown_viewer==0.2.14
+txl_notebook_editor==0.2.14
+txl_remote_contents==0.2.14
+txl_remote_kernels==0.2.14
+txl_remote_terminals==0.2.14
+txl_terminal==0.2.14
+txl_text_editor==0.2.14
+txl_widgets==0.2.15
+typeguard==4.3.0
+typer==0.13.0
 typing_extensions==4.12.2
+uc-micro-py==1.0.3
 urllib3==2.2.3
 wcwidth==0.2.13
 Werkzeug==3.1.3
 wrapt==1.14.1
+wsproto==1.2.0
+ypywidgets==0.7.0
+ypywidgets-textual==0.4.4
+zipp==3.19.2
